--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
   <script>
     function go() {
       const id = new URLSearchParams(location.search).get("id");
-      location.href = `https://t.me/CrimeZone2_bot?start=verify_${id}`;
+      location.href = `https://t.me/Beidururbot?start=verify_${id}`;
     }
   </script>
 </body>
